# VR_TCMPODS

./: README.md
NDD_VR_Viewer/: CMakeLists.txt  README.md  main.cpp
NDD_VR_Viewer/include/: ODSENNApplication.hpp  application.hpp  camera.hpp  drawable.hpp  globject.hpp  inputmanager.hpp  mouse.hpp  nddapplication.hpp  odssphereobject.hpp  quad.hpp  renderpass.hpp  shader.hpp  stereocamera.hpp  texture.hpp  videosynchronizer.hpp  videotexture.hpp  vrcontext.hpp
NDD_VR_Viewer/shader/: basic.fs  basic.vs  ndd.fs  ndd.vs  ndd_foreground.fs  ndd_foreground.vs  ods_basic.fs  ods_basic.vs  screenquad.fs  screenquad.vs
NDD_VR_Viewer/src/: application.cpp  globject.cpp  inputmanager.cpp  mouse.cpp  nddapplication.cpp  odssphereobject.cpp  quad.cpp  renderpass.cpp  shader.cpp  texture.cpp  videosynchronizer.cpp  videotexture.cpp  vrcontext.cpp
Neural_Depth_Decoder/: README.md
Neural_Depth_Decoder/code/: Datasets.py  Losses.py  Networks.py  computeDepth.py  config.py  createMegaTextures.py  generateSequence.py  inpaintingLayer.py  train.py  utils.py
Neural_Depth_Decoder/configs/: conda.yml  default_finetuning.yaml  default_initial.yaml  generate.yaml
